--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@
   
   .progress {
     width: 100%;
-    /* -webkit-appearance: none; */
+    -webkit-appearance: none;
     height: 6px;
     background: #d3d3d3;
     outline: none;
