--- a/style.css
+++ b/style.css
@@ -136,9 +136,9 @@
 .sound-bar {
   -webkit-appearance: none; /* Loại bỏ kiểu mặc định */
   width:12px;
-  /* height: 8px; */
+  height: 80px;
   background: #ddd;
-  border-radius: 5px;
+  border-radius: 2px;
   outline: none;
   position: relative;
  display: none;
@@ -146,26 +146,21 @@
 
 /* Thiết lập cho thumb (nút trượt) */
 .sound-bar::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 3px;
-  height: 100%;
-  background: var(--primary-color);
-  cursor: pointer;
-  border-radius: 4px;
-  position: relative;
+    -webkit-appearance: none;
+    width: 3px;
 }
-.sound-bar::-webkit-slider-thumb:hover {
+.sound-bar::before:hover {
   opacity: 0.8;
 
 }
 /* Thiết lập cho track (đường chạy) */
-.sound-bar::-webkit-slider-runnable-track { 
-   /* width: 30px;  */
+/* .sound-bar::-webkit-slider-runnable-track { 
+  width:12px;
   height: 80px;
   cursor: pointer;
   background: #ddd; 
   border-radius: 2px; 
-}
+} */
 
 .sound-bar::before {
   content: '';
@@ -174,9 +169,10 @@
   width: var(--width-before-sound);
   height: 100%;
   background-color: var(--primary-color);
-  opacity: 0.7;
+  opacity: 0.8;
   border-radius: 2px;
-}
+  cursor: pointer;
+} 
 
 /* Để tùy chỉnh phần sau của thumb (phần chưa di chuyển) */
 /* .sound-bar::-webkit-slider-runnable-track::after {
