--- a/style.css
+++ b/style.css
@@ -94,6 +94,9 @@
     padding: 18px;
     font-size: 18px;
   }
+  .control .btn:hover {
+    opacity: 0.8;
+  }
   
   .control .btn.active {
     color: var(--primary-color);
@@ -114,29 +117,34 @@
   .progress {
     width: 100%;
     -webkit-appearance: none;
-    height: 8px;
+    height: 12px;
     background: #d3d3d3;
     outline: none;
     opacity: 0.7;
     -webkit-transition: 0.2s;
     transition: opacity 0.2s;
+    cursor: pointer;
   }
   
   .progress::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 12px;
-    height: 6px;
+    width: 16px;
+    height: 11px;
     background-color: var(--primary-color);
     cursor: pointer;
+    border-radius: 6px;
   }
   .volume-icon {
     cursor: pointer;
   }
+  .volume-icon:hover {
+    opacity: 0.8;
+  }
  /* Thiết lập cơ bản cho thanh trượt */
 .sound-bar {
   -webkit-appearance: none; /* Loại bỏ kiểu mặc định */
-  width:12px;
+  width:14px;
   height: 80px;
   background: #ddd;
   border-radius: 2px;
@@ -148,7 +156,11 @@
 /* Thiết lập cho thumb (nút trượt) */
 .sound-bar::-webkit-slider-thumb {
     -webkit-appearance: none;
-    width: 3px;
+    width: 4px;
+    /* height: 80px; */
+    /* background-color: var(--primary-color);
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px; */
 }
 .sound-bar::before:hover {
   opacity: 0.8;
@@ -159,10 +171,9 @@
   width:12px;
   height: 80px;
   cursor: pointer;
-  background: #ddd; 
+  background: blue; 
   border-radius: 2px; 
 } */
-
 .sound-bar::before {
   content: '';
   position: absolute;
@@ -173,7 +184,7 @@
   opacity: 0.8;
   border-radius: 2px;
   cursor: pointer;
-} 
+}  
 
 /* Để tùy chỉnh phần sau của thumb (phần chưa di chuyển) */
 /* .sound-bar::-webkit-slider-runnable-track::after {
@@ -196,7 +207,7 @@
   /* PLAYLIST */
   .playlist {
     margin-top: 408px;
-    padding: 12px;
+    padding: 12px 4px;
   }
   
   .song {
@@ -252,7 +263,147 @@
     color: #999;
     font-size: 18px;
   }
+
+  /* ---------------toast------------------------------- */
+.content {
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.toast {
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px 0;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 2px;
+  border-left: 4px solid;
+  max-width: 99%;
+  width: 480px;
+  margin-left: auto;
+  transition: all linear 0.3s;
+}
+.toast-container {
+  position: fixed;
+  top: 32px;
+  right: 32px;
+  z-index: 10;
+  max-width: 100%;
+}
+.toast-icon-check {
+  padding: 0 16px;
+  font-size: 26px;
+  cursor: pointer;
+
+}
+.toast-body {
+  flex: 1;
+}
+.toast-title {
+  font-size: 16px;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 4px;
+}
+.toast-msg {
+  font-size: 14px;
+  color: #888;
+  word-break: break-all;
+}
+.toast-close {
+  padding: 0 16px;
+  font-size: 24px;
+  color: rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+.toast-close:hover {
+  opacity: 0.8;
+}
+.toast--success {
+  border-color: #47d864;
+}
+.toast--success .toast-icon-check {
+  color:#47d864;
+}
+.toast--info {
+  border-color: #2f86eb;
+}
+.toast--info .toast-icon-check {
+  color:#2f86eb;
+}
+.toast--warning {
+  border-color: #ffc821;
+}
+.toast--warning .toast-icon-check {
+  color:#ffc821;
+}
+.toast--error {
+  border-color: #ff623d;
+}
+.toast--error .toast-icon-check {
+  color:#ff623d;
+}
+@keyframes slidEInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(calc(100% + 38px));
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes fadeOut {
+  to {
+    opacity: 0;
+    /* transform: translateX(calc(100% + 38px)); */
+  }
+}
+.btn-toast {
+  display: inline-block;
+  text-decoration: none;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: #fff;
+  padding: 12px 48px;
+  border-radius: 50px;
+  cursor: pointer;
+  min-width: 120px;
+  transition: opacity 0.2s ease;
+  user-select: none;  
+}
+.btn--success {
+  background-color: #71be34;
+}
+.btn--danger {
+  background-color: #ff623d;
+}
+.btn--warn {
+  background-color: #ffb702;
+}
+.btn--info {
+  background-color: #2f86eb;
+}
+.content-btn {
+  flex-direction: row;
+  max-width: 1200px;
+  margin: 0 auto;
+  justify-content: center;
+  padding: 40px 0;
+  flex-wrap: wrap;  
+}
   .open {
     display: block;
   }
+
+@media (max-width:480px) {
+  .toast {
+    transform: translateX(30px);
+  }
+}
+
   
